# split_revenue

calculate/: README.md  calculate.code-workspace
calculate/projects/calculate/: README.md  pyproject.toml
calculate/projects/calculate/smart_contracts/revenue_sharing/: revenue_sharing.py
calculate/projects/calculate/smart_contracts/revenue_sharing/artifacts/: application.json  approval.teal  contract.json
