[tool.poetry]
name = "calculate"
version = "0.1.0"
description = "Algorand smart contracts"
authors = ["nawtfound404 <my@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^2.4.0"
python-dotenv = "^1.0.0"
algorand-python = "^2.0.0"
algorand-python-testing = "^0.4.0"
beaker = "^1.13.0"

[tool.poetry.group.dev.dependencies]
algokit-client-generator = "^1.1.3"
puyapy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

